style/style.css
@font-face {
    font-family: 'tan'; /*a name to be used later*/
    src: url('../fonts/tanspring.otf'); /*URL to font*/
}
@font-face {
    font-family: 'glinster'; /*a name to be used later*/
    src: url('../fonts/glinster.otf'); /*URL to font*/
}
@font-face {
    font-family: 'glitten'; /*a name to be used later*/
    src: url('../fonts/glitten-all-caps.regular.otf'); /*URL to font*/
}
body {
    margin-bottom: 0;
    overflow-y: auto;
    overflow-x:hidden;
}
.navigation {
    height: 70px;
    background-color: none;
}
.nav-container {
  max-width: 100%;
  margin: 0 auto;
}
hr {
    border: none;
    border-top: 2px solid black;
    width: 75%;
}
nav {
    float: none;
    display: inline-block;
}
nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
nav ul li {
    float: left;
    position: relative;
}
nav ul li a, nav ul li a:visited {
    font: .75em/70px 'roboto';
    display: block;
    padding: 0 20px;
    background: none;
    color: black;
    text-decoration: none;
    letter-spacing: 1px;
    text-transform: uppercase;
}
nav ul li a:hover, nav ul li a:visited:hover {
    font-style: italic;
}
nav ul li a:not(:only-child):after, nav ul li a:visited:not(:only-child):after {
    padding-left: 4px;
    content: ' ▾';
}
nav ul li ul li {
    min-width: 190px;
}
nav ul li ul li a {
    padding: 15px;
    line-height: 20px;
}
.active {
    font-weight: 700;
}
.nav-dropdown {
  position: absolute;
  display: none;
  z-index: 1;
  background-color: rgba(255, 255, 255, 0.4);
  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
}
.nav-mobile {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  height: 70px;
  width: 70px;
  color: black;
}
#nav-toggle {
    position: absolute;
    left: 18px;
    top: 22px;
    cursor: pointer;
    padding: 10px 35px 16px 0px;
}
#nav-toggle span, #nav-toggle span:before, #nav-toggle span:after {
    cursor: pointer;
    border-radius: 1px;
    height: 5px;
    width: 35px;
    background: black;
    position: absolute;
    display: block;
    content: '';
    transition: all 300ms ease-in-out;
}
#nav-toggle span:before {
    top: -10px;
}
#nav-toggle span:after {
    bottom: -10px;
}
#nav-toggle.active span {
    background-color: transparent;
}
#nav-toggle.active span:before, #nav-toggle.active span:after {
    top: 0;
}
#nav-toggle.active span:before {
    transform: rotate(45deg);
}
#nav-toggle.active span:after {
    transform: rotate(-45deg);
}
a#btn {
    text-decoration: none;
    color: black;
    padding: 10px;
    border-radius: 15px;
    border: 2px solid black;
}
h1 {
    font: 10em 'tan';
    letter-spacing: -.1em;
    text-align: center;
}
h2 {
    font: 12em/1.3em 'glinster';
    text-transform: lowercase;
    text-align: center;
    letter-spacing: -.03em;
    margin:0;
}
h3 {
    font: 12em/0 'tan';
    letter-spacing: -.08em;
    padding:0;
    margin:.1em;
    text-align: center;
}
h4 {
    font: 700 2em 'Roboto';
    text-transform: uppercase;
    letter-spacing: 2px;
}
h5 {
    font: 3em 'glitten';
    letter-spacing: normal;
    margin: 5 5;
}
h6 {
    font: 100 1em 'Roboto';
    text-transform: uppercase;
    letter-spacing: 1px;
}
.bg {
    height: 100vh;
    width: 100vw;
    position: fixed;
    background-size: cover;
    background-position: center;
    margin:-10px !important;
    z-index: -1;
}
.bg#crew {
    background-image: url('../images/crew.png');
}
.bg#home {
    background-image: url('../images/home.png');
}
.bg#travel{
    background-image: url('../images/travel.png');
}
.bg#cost {
    background-image: url('../images/cost.png');
}
.bg#construction {
    background-image: url('../images/construction.png');
}
.bg#miami-vice {
    background-image: url('../images/miami-vice.png');
}
.bg#diamonds {
    background-image: url('../images/diamonds.png');
}
.bg#barbie {
    background-image: url('../images/barbie.png');
}
.border-container {
    background-color:white;
    margin: 5em 10em;
    padding: 3em;
}
.vline {
    border-left: .5vw solid black;
    height: 200px;
    position: relative;
    left: 50%;
    margin-left: -3px;
}
.title {
    padding: 50px;
}
.title.open {
    padding-top: 100px;
}
div {
    text-align: center;
    margin-top: 1em;
    font: 100 1em/2em 'Roboto';
    text-transform: uppercase;
    letter-spacing: 1px;
}
.div-trans {
    margin-left: 50px;
    margin-right: 50px;
}
.gs {
    font: 10em 'glinster';
    letter-spacing: -.07em;
    padding: .5em 0 0 0;
    margin: 0 0;
    text-transform: lowercase;
}
.gs#date {
    font-size: 6em;
    letter-spacing: 0;
}
p#gl {
    font: 2em 'glitten';
    margin-bottom: 1.5em;
}
.tan {
    padding: 0 0;
    margin: 0 0;
    font: 10em/.75em 'tan';
    letter-spacing: -.1em;
}
.tan#nicole {
    font-size: 8em;
}
.dot {
    height: 80px;
    width: 80px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    margin: 10px 5px;
}
img {
    display: block;
    padding: 10px;
    filter: drop-shadow(5px 5px 5px #535353);
    width: 300px;
    height: 300px;
}
img#icons {
    filter: none;
    width: 50px;
    height: 50px;
}
figure {
    display:inline-block;
}
figcaption#title {
    font: 4em 'tan';
    letter-spacing: -.1em;
    text-transform: uppercase;
}
figcaption#sub {
    font: 1.5em 'glitten';
    text-transform: uppercase;
}
footer {
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
    height: 100px;       
}
@media only screen and (max-width:1000px) {
    html, body {
        overflow-x:hidden !important;
    }
    img {
        width: 100% !important;
        height: auto !important;
    }
    img#icons {
        width: 50px !important;
    }
    div {
        font-size: 12px;
        letter-spacing: 2px;
    }
    .nav-mobile {
        display: block;
    }
    nav {
        width: 100%;
        padding: 70px 0 15px;
        float: right;
    }
    nav ul {
        display: none;
    }
    nav ul li {
        float: none;
    } 
    nav ul li a {
        padding: 15px;
        line-height: 20px;
        font-size: 12px !important;
    }
    nav ul li ul li a {
        padding-left: 50px;
    }
    .nav-dropdown {
        position: static;
    }
    .vline {
        height: 50px;
    }
    .border-container {
        background-color:white;
        margin: 5px;
        padding: 5px 10px;
    }
    h2 {
        font-size: 60px;
        letter-spacing: -5px;
    }
    h3 {
        font-size: 70px;
        letter-spacing: -5px;
    }
    h4 {
        font-size: 20px;
    }
    h5 {
        font-size: 25px;
    }
    h6 {
        font-size: 12px;
        letter-spacing: 3px;
    }
    .gs {
        font-size: 40px;
        letter-spacing:-2px;
    }
    .gs#date {
        font-size: 25px;
    }
    p#gl {
        font-size: 18px;
        letter-spacing: 5px;
    }
    .tan{
        font-size: 70px;
        letter-spacing:-7px;
    }
    .tan#nicole {
        font-size: 40px;
        letter-spacing: -3px;
    }
    .dot {
        height: 50px;
        width: 50px;
    }
}
@media screen and (min-width: 799px) {
    .nav-list {
      display: block !important;
    }
}

